--- a/templates/alexnet.html
+++ b/templates/alexnet.html
@@ -2,7 +2,7 @@
 <html lang = "en" >
 <head >
      <meta charset = "UTF-8" >
-    <title>随机生成动漫妹子</title>
+    <title>AlexNet神经网络打造的图像分类器</title>
     <script type="text/javascript">
         function ProcessFile() {
             var file = document.getElementById('file').files[0];
@@ -28,14 +28,12 @@
     </script>
 </head>
 <body>
-    <form action="/api/dcgan/" method="post" enctype="multipart/form-data">
+    <form action="/api/" method="post" enctype="multipart/form-data">
         <P>
-        <h4>  请点击以下按钮随机生成动漫妹子头像，(可无限次生成哦~):</h4>
-            <input type="submit" value="生成"><br>
+        <h4>上传一张图片</h4>
+            <input type="submit" value="分类"><br>
 
          <h5>{{ message }}</h5>
-        <h4> 这是生成样本：</h4> <br>
-        <img src="/static/cartoon_sister.png" alt="">
     </form>
 </body>
 </html>
