--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DCGAN!</title>
+    <title>Image Classifier tool</title>
     <link rel="stylesheet" href="/static/commons.css">
     <style>
         label {
@@ -15,7 +15,7 @@
 <form action="/index/" method="post">
     <h3>点击下面相关链接进入</h3>
     <p>
-        点击这里---> <a href="http://127.0.0.1:8888/api/dcgan/" target="_blank">随机生成动漫妹子(alpha version)</a><br><br>
+        点击这里---> <a href="http://127.0.0.1:8888/api/" target="_blank">AlexNet网络打造的图片分类器</a><br><br>
     </p>
     {% csrf_token %}
 </form>
